--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
         <div class="left-side-section">
             <div class="accordion-container">
                 <p-accordion>
-                    <p-accordionTab header="Godfather I" [selected]="true" class="accordion-header">
-                        <p-header class="accordion-header">
+                    <p-accordionTab header="Godfather I"  class="accordion-header">
+                        <p-header class="accordion-heading">
                             <div>Header Content</div>
                             <img src="../assets/images/icon_Plus.png" class="icon-plus">
                         </p-header>
@@ -21,21 +21,7 @@
                         benevolent to those who give respect, but given to ruthless violence whenever anything stands
                         against the good of the family.
                     </p-accordionTab>
-                    <p-accordionTab header="Godfather II" class="accordion-header">
-                        Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film,
-                        The_Godfather parallels the young Vito Corleone's rise with his son Michael's spiritual fall,
-                        deepening The_Godfather's depiction of the dark side of the American dream. In the early 1900s,
-                        the child Vito flees his Sicilian village for America after the local Mafia kills his family.
-                        Vito struggles to make a living, legally or illegally, for his wife and growing brood in Little
-                        Italy, killing the local Black Hand Fanucci after he demands his customary cut of the tyro's
-                        business. With Fanucci gone, Vito's communal stature grows.
-                    </p-accordionTab>
-                    <p-accordionTab header="Godfather III" class="accordion-header">
-                        After a break of more than 15 years, director Francis Ford Coppola and writer Mario Puzo
-                        returned to the well for this third and final story of the fictional Corleone crime family. Two
-                        decades have passed, and crime kingpin Michael Corleone, now divorced from his wife Kay has
-                        nearly succeeded in keeping his promise that his family would one day be completely legitimate.
-                    </p-accordionTab>
+                   
                 </p-accordion>
                 <div class="set">
                     <a href="#">
