--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,9 @@ body {
 .ui-accordion-content-wrapper-overflown {
     overflow: hidden;
 }
+.ui-accordion-content {
+    padding: 25px 15px 25px 45px;
+    border-top: 1px solid #979797;  
+    
+
+}
