--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,21 +8,7 @@
     <section class="information">
         <div class="left-side-section">
             <div class="accordion-container">
-                <p-accordion>
-                    <p-accordionTab header="Godfather I"  class="accordion-header">
-                        <p-header class="accordion-heading">
-                            <div>Header Content</div>
-                            <img src="../assets/images/icon_Plus.png" class="icon-plus">
-                        </p-header>
-                        The story begins as Don Vito Corleone, the head of a New York Mafia family, overseeshis
-                        daughter's wedding. His beloved son ichael has just come home from the war, but does not intend
-                        to become part of his father's business. T hrough Michael's life the nature of the family
-                        business becomes clear. The business of the family is just like the head of the family, kind and
-                        benevolent to those who give respect, but given to ruthless violence whenever anything stands
-                        against the good of the family.
-                    </p-accordionTab>
-                   
-                </p-accordion>
+               <app-accordion></app-accordion>
                 <div class="set">
                     <a href="#">
                         Questions
