Add dynamic from creation and functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
     <img src="../assets/images/Logo.png" class="logo-image">
     <div class="section-heading-text">WS2008 EOS Call Guide</div>
   </header>
+  <div>
+    <app-questionnaire-nav></app-questionnaire-nav>
+    <router-outlet></router-outlet>
+  </div>
 
   <!-- page1 html start here -->
   <section class="information">
