Font faces added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -218,12 +218,13 @@
                 <div class="button-styling">Next<img class="next-arrow" src="../assets/images/icon_arrow.png"></div>
             </div>
         </div>
+        <div class="right-nav">
+            <div class="right-nav-button-wrapper"></div>
+            <app-accordion class="right-nav-accordion"></app-accordion>
+        </div>
     </section>
     <!-- page1 html end here -->
 
 
     <h3 class="first">Default</h3>
-
-
-
 </main>
