--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,135 @@
+@font-face {
+    font-family: 'MetricHPE';
+    src: url('./assets/fonts/MetricHPE-Semibold.eot');
+    src: url('./assets/fonts/MetricHPE-Semibold.eot?#iefix') format('embedded-opentype'),
+         url('./assets/fonts/MetricHPE-Semibold.ttf') format('truetype'),
+         url('./assets/fonts/MetricHPE-Semibold.woff') format('woff'),
+         url('./assets/fonts/MetricHPE-Semibold.woff2') format('woff2');
+    font-weight: 600;
+  }
+  @font-face {
+    font-family: 'MetricHPE';
+    src: url('./assets/fonts/MetricHPE-Bold.eot');
+    src: url('./assets/fonts/MetricHPE-Bold.eot?#iefix') format('embedded-opentype'),
+         url('./assets/fonts/MetricHPE-Bold.ttf') format('truetype'),
+         url('./assets/fonts/MetricHPE-Bold.woff') format('woff'),
+         url('./assets/fonts/MetricHPE-Bold.woff2') format('woff2');
+    font-weight: 700;
+  }
+  
+  
+
+  @font-face {
+    font-family: 'MetricHPE';
+    src: url('./assets/fonts/MetricHPE-Regular.eot');
+    src: url('./assets/fonts/MetricHPE-Regular.eot?#iefix') format('embedded-opentype'),
+         url('./assets/fonts/MetricHPE-Regular.ttf') format('truetype'),
+         url('./assets/fonts/MetricHPE-Regular.woff') format('woff'),
+         url('./assets/fonts/MetricHPE-Regular.woff2') format('woff2');
+    font-weight: 400;
+  }
+  
+  
+  
+  
+  
+
 /* You can add global styles to this file, and also import other style files */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    box-sizing: border-box;
+    
+}
+
 body {
     margin: 0 auto;
     color: #000000;
+    font-family: "MetricHPE";
+
 }
 .ui-accordion-content-wrapper-overflown {
     overflow: hidden;
@@ -9,6 +137,11 @@ body {
 .ui-accordion-content {
     padding: 25px 15px 25px 45px;
     border-top: 1px solid #979797;  
-    
-
+}
+.icon-minus {
+    height: 2px;
+    width: 16px;
+}
+.icon-plus{
+    height: 16px;
 }
