--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,60 +1,83 @@
 <section>
-	<form (submit)="nextQuestion()">
+	<form>
 		<div>{{currentFormData.question}}</div>
-		<div *ngFor="let eachFormElem of currentFormData.formData; let outerIndex = index">
-			<div *ngIf="eachFormElem.type === 'text'">
-				<label [for]="eachFormElem.name">{{eachFormElem.label}}</label>
-				<input  [type]="eachFormElem.type" [name]="eachFormElem.name+outerIndex" [(ngModel)]="eachFormElem.value" >
+		<div *ngFor="let eachFormElem of currentFormData.formData; let outerIndex = index;">
+
+
+			<div class="input-section" *ngIf="eachFormElem.type === 'text'">
+				<label [for]="eachFormElem.name" class="input-label-text">{{eachFormElem.label}}</label>
+				<input type="text" [name]="eachFormElem.name+outerIndex" [(ngModel)]="eachFormElem.value" class="input-element">
 			</div>
+
+
 			<div *ngIf="eachFormElem.type === 'textArea'">
-				<label [for]="eachFormElem.name">{{eachFormElem.label}}</label>
-				<textarea [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value" ></textarea>
+				<label class="input-label-text common-label-padding" [for]="eachFormElem.name">{{eachFormElem.label}}</label>
+				<textarea [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value" cols="40" rows="5" class="text-area"></textarea>
 			</div>
+
+
 			<div *ngIf="eachFormElem.type === 'list'">
 				<div *ngFor="let eachOption of eachFormElem.options; let ind=index;">
 					<label>{{eachOption.label}}</label>
 					<div>{{eachOption.value}}</div>
 				</div>
 			</div>
-			<div *ngIf="eachFormElem.type === 'radio'">
-				<label [for]="eachFormElem.name">{{eachFormElem.label}}</label>
+
+
+			<div class="radio-button-padding" *ngIf="eachFormElem.type === 'radio'">
+				<div class="">{{eachFormElem.label}}</div>
 				<div *ngFor="let eachOption of eachFormElem.options; let ind=index;">
-					<label [for]="eachFormElem.name">{{eachOption.label}}</label>
-					<input type="radio" [name]="eachFormElem.name" [value]="eachOption.value" [(ngModel)]="eachFormElem.value" >
+					<input type="radio" class="form-radio" [name]="eachFormElem.name" [value]="eachOption.value" [(ngModel)]="eachFormElem.value">
+					<label [for]="eachFormElem.name" class="input-label-text radio-label-text">{{eachOption.label}}</label>
 					<div *ngIf="eachOption.helpField">
-						<div *ngFor="let eachHelpFiled of eachOption.helpField">
-							<label>{{ eachHelpFiled.label }}</label>
-							<input [type]="eachHelpFiled.type" name="dummy" [(ngModel)]="eachHelpFiled.value">
+						<div *ngFor="let eachHelpFiled of eachOption.helpField" class="radio-button-padding">
+							<label [for]="eachHelpFiled.name" class="input-label-text common-label-padding">{{ eachHelpFiled.label }}</label>
+							<input [type]="eachHelpFiled.type" name="dummy" [(ngModel)]="eachHelpFiled.value" class="input-element">
 						</div>
 					</div>
-					<div *ngIf="eachOption.addDetailsData">
-						<div class="add-details-section" *ngFor="let eachHelpFiled of eachOption.addDetailsData; let formInd=index">
-							<div *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
-								<label>{{ eachFiled.label }}</label>
-								<input [type]="eachFiled.type" [name]="'addDetailsData'+formInd+fieldInd" [(ngModel)]="eachFiled.value">
+					<div class="radio-input-section" *ngIf="eachOption.addDetailsData">
+						<div class="stake-holder-section add-details-section" *ngFor="let eachHelpFiled of eachOption.addDetailsData; let formInd=index">
+							<div class="input-section" *ngFor="let eachFiled of eachHelpFiled.fields; let fieldInd=index;">
+								<div class="input-label-text">{{ eachFiled.label }}</div>
+								<input class="input-element" [type]="eachFiled.type" [name]="'addDetailsData'+formInd+fieldInd" [(ngModel)]="eachFiled.value">
 							</div>
 						</div>
-						<div (click)="addNewDetails(eachFormElem, ind)">+ Add details</div>
-					</div>
-				</div>
-			</div>
-			<div *ngIf="eachFormElem.type === 'checkbox'">
-				<label [for]="eachFormElem.name">{{eachFormElem.label}}</label>
-				<div *ngFor="let eachOption of eachFormElem.options; let ind = index;">
-					<label [for]="eachFormElem.name">{{eachOption.label}}</label>
-					<input type="checkbox" [name]="eachFormElem.name+ind" [value]="eachOption.value" [checked]="eachOption.isSelected" [(ngModel)]="eachOption.isSelected" >
-					<div *ngIf="eachOption.helpField">
-						<div *ngFor="let eachHelpFiled of eachOption.helpField">
-							<label>{{ eachHelpFiled.label }}</label>
-							<input [type]="eachHelpFiled.type" name="dummy" [(ngModel)]="eachHelpFiled.value">
+						<div class="plus-stake-holder" (click)="addNewDetails(eachFormElem, ind)">
+							<img src="../assets/images/icon_Plus.png" class="icon-plus">
+							<div class="add-stake-holder">Add stakeholder</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
+
+			<div *ngIf="eachFormElem.type === 'checkbox'">
+				<div>{{eachFormElem.label}}</div>
+				<div *ngFor="let eachOption of eachFormElem.options; let ind = index;">
+					<input type="checkbox" [name]="eachOption.name+ind" [value]="eachOption.value" [checked]="eachOption.isSelected" [(ngModel)]="eachOption.isSelected" >
+					<label [for]="eachOption.name+ind" class="input-label-text">{{eachOption.label}}</label>
+					<div *ngIf="eachOption.helpField">
+						<div *ngFor="let eachHelpFiled of eachOption.helpField" class="radio-button-padding">
+							<label [for]="eachHelpFiled.name" class="input-label-text common-label-padding">{{ eachHelpFiled.label }}</label>
+							<input [type]="eachHelpFiled.type" name="dummy" [(ngModel)]="eachHelpFiled.value" class="input-element">
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 		</div>
-		<div>
-			<input *ngIf="currentPage != 0" type="button" value="Previous question" (click)="previousQuestion()">
-			<input name="submit" value="Next question" type="submit">
+
+
+		<div class="common-button-styles">
+			<div *ngIf="currentPage != 0" class="button-styling prev-arrow-button" (click)="previousQuestion()">
+				Previous
+				<img class="prev-arrow" src="../assets/images/icon_arrow.png">
+			</div>
+			<div class="button-styling" (click)="nextQuestion()">
+				Next
+				<img class="next-arrow" src="../assets/images/icon_arrow.png">
+			</div>
 		</div>
 	</form>
 </section>
