Add side-nav accordion interaction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
 	<section class="information">
 		<div class="left-side-section">
 			<div class="accordion-container">
-               <app-accordion></app-accordion>
-				<div class="set">
+				<app-accordion></app-accordion>
+				<!-- <div class="set">
 					<a href="#">
 						Questions
 						<img src="../assets/images/icon_Plus.png" class="icon-plus">
@@ -67,7 +67,7 @@
 						do, which means you reduce your overall server count. WS 2016 takes full advantage of this
 						technology.
 					</div>
-				</div>
+				</div> -->
 			</div>
 
 
