--- a/src/app/utilities/accordion/accordion.component.html
+++ b/src/app/utilities/accordion/accordion.component.html
@@ -6,11 +6,11 @@
             <img src="../assets/images/icon_Minus.png" class="icon-minus" *ngIf="openAccordionIndex == i">
         </p-header>
         <ng-template pTemplate="content" >
-            <div *ngFor="let eachQue of questionnaireData; let i= index">
+            <div *ngFor="let eachQue of questionnaireData; let ind= index">
                 <div class="content-sections">
                     <div>
-                        <input type="checkbox" [id]="eachQue.formData[0].name+ind" [name]="eachQue.formData[0].name+ind" [value]="eachQue.question" [checked]="eachQue.isAnswered" [(ngModel)]="eachQue.isAnswered">
-                        <label [for]="eachQue.formData[0].name+ind" class="input-label-text">{{ eachQue.question }}{{eachQue.isAnswered}}</label>
+                        <input disabled type="checkbox" [id]="eachQue.formData[0].name" [name]="eachQue.formData[0].name"  [checked]="eachQue.isAnswered" [(ngModel)]="eachQue.isAnswered">
+                        <label [for]="eachQue.formData[0].name" class="input-label-text">{{ eachQue.question }}</label>
                     </div>
                 </div>
             </div>
