--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -10,8 +10,8 @@
 			</div>
 
 
-			<div *ngIf="eachFormElem.type === 'textArea'">
-				<label class="input-label-text common-label-padding" [for]="eachFormElem.name">{{eachFormElem.label}}</label>
+			<div class="checkbox-input-section" *ngIf="eachFormElem.type === 'textArea'">
+				<label class="input-label-text common-label-padding d-block" [for]="eachFormElem.name">{{eachFormElem.label}}</label>
 				<textarea [name]="eachFormElem.name" [(ngModel)]="eachFormElem.value" cols="40" rows="5" class="text-area"></textarea>
 			</div>
 
