New fonts added.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main class="main-section">
 	<header class="header-section">
 		<img src="../assets/images/Logo.png" class="logo-image">
-		<div class="section-heading-text">WS2008 EOS Call Guide</div>
+		<div class="section-heading-text">Windows Server 2008 End of Life Call Guide</div>
 	</header>
 
 	<!-- page1 html start here -->
