--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,6 +1,6 @@
 <section>
 	<form>
-		<div class="section-heading-text common-heading-padding">{{currentFormData.question}}</div>
+		<div class="section-heading-text common-heading-padding hpe-question">{{currentFormData.question}}</div>
 		<div *ngFor="let eachFormElem of currentFormData.formData; let outerIndex = index;">
 
 
