--- a/src/app/utilities/accordion/accordion.component.scss
+++ b/src/app/utilities/accordion/accordion.component.scss
@@ -12,3 +12,7 @@
     justify-content: space-between;
     align-items: center;
 }
+.accordion-title {
+    font-size: 16px;
+    font-weight: 600;
+}
