--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,9 @@
 
 .main-section {
 	background: #3c1454;
-	height: 100%;
+    height: 100%;
+    max-width: 1366px;
+    margin: 0 auto;
 }
 
 input{
@@ -12,9 +14,9 @@ input{
 }
 
 .header-section {
-	height: 100px;
+	height: 150px;
 	background: white;
-	padding: 0px 30px;
+	padding: 0px 35px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -25,7 +27,7 @@ input{
 }
 
 .logo-image{
-    height: 65px;
+    height: 60px;
 }
 
 .content-section {
@@ -156,8 +158,8 @@ input[type=checkbox] + label {
      background-color: white;
      color: #666;
      top: 5px;
-     height: 28px;
-     width: 28px;
+     height: 22px;
+     width: 22px;
      border: 1px solid #c7cbcc;
      border-radius: 50px;
      cursor: pointer;     
@@ -180,8 +182,10 @@ input[type=checkbox] + label {
 }
 
 .section-heading-text{
-    font-size: 34px;
-    color: #000000;
+    font-style: normal;
+    font-size: 33px;
+    line-height: 29px;
+    font-weight: 500;
 }
 
 .section-subheading-text{
