--- a/src/app/utilities/accordion/accordion.component.html
+++ b/src/app/utilities/accordion/accordion.component.html
@@ -1,9 +1,9 @@
 <p-accordion (onOpen)="onTabOpen($event)" (onClose)="onTabClose($event)">
     <p-accordionTab header="Godfather I"  class="accordion-header">
         <p-header class="accordion-heading">
-            <div>Header Content</div>
-            <img src="../assets/images/icon_Plus.png" class="icon-plus" *ngIf="openAccordionIndex != i">
-            <img src="../assets/images/icon_Minus.png" class="icon-minus" *ngIf="openAccordionIndex == i">
+            <div class="accordion-title">Header Content</div>
+            <img src="../assets/images/icon_Plus.png" class="icon-plus" *ngIf="openAccordionIndex == i">
+            <img src="../assets/images/icon_Minus.png" class="icon-minus" *ngIf="openAccordionIndex != i">
         </p-header>
         <ng-template pTemplate="content" >
             <div *ngFor="let eachQue of questionnaireData; let ind= index">
