--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,4 @@
-@font-face {
-    font-family: 'MetricHPE';
-    src: url('./assets/fonts/MetricHPE-Semibold.eot');
-    src: url('./assets/fonts/MetricHPE-Semibold.eot?#iefix') format('embedded-opentype'),
-         url('./assets/fonts/MetricHPE-Semibold.ttf') format('truetype'),
-         url('./assets/fonts/MetricHPE-Semibold.woff') format('woff'),
-         url('./assets/fonts/MetricHPE-Semibold.woff2') format('woff2');
-    font-weight: 600;
-  }
+
   @font-face {
     font-family: 'MetricHPE';
     src: url('./assets/fonts/MetricHPE-Bold.eot');
@@ -17,17 +9,33 @@
     font-weight: 700;
   }
   
-  
-
   @font-face {
     font-family: 'MetricHPE';
-    src: url('./assets/fonts/MetricHPE-Regular.eot');
-    src: url('./assets/fonts/MetricHPE-Regular.eot?#iefix') format('embedded-opentype'),
-         url('./assets/fonts/MetricHPE-Regular.ttf') format('truetype'),
-         url('./assets/fonts/MetricHPE-Regular.woff') format('woff'),
-         url('./assets/fonts/MetricHPE-Regular.woff2') format('woff2');
-    font-weight: 400;
-  }
+    src: url('./assets/fonts/MetricHPE-Semibold.woff2') format('woff2'),
+        url('./assets/fonts/MetricHPE-Semibold.woff') format('woff'),
+        url('./assets/fonts/MetricHPE-Semibold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'MetricHPE';
+    src: url('./assets/fonts/MetricHPE-Medium.woff2') format('woff2'),
+        url('./assets/fonts/MetricHPE-Medium.woff') format('woff'),
+        url('./assets/fonts/MetricHPE-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'MetricHPE';
+    src: url('./assets/fonts/MetricHPE-Regular.woff2') format('woff2'),
+        url('./assets/fonts/MetricHPE-Regular.woff') format('woff'),
+        url('./assets/fonts/MetricHPE-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
   
   
   
@@ -312,8 +320,8 @@ input[type=checkbox] + label {
      background-color: white;
      color: #666;
      top: 5px;
-     height: 28px;
-     width: 28px;
+     height: 22px;
+     width: 22px;
      border: 1px solid #c7cbcc;
      border-radius: 50px;
      cursor: pointer;     
