--- a/src/app/utilities/accordion/accordion.component.scss
+++ b/src/app/utilities/accordion/accordion.component.scss
@@ -16,3 +16,11 @@
     font-size: 16px;
     font-weight: 600;
 }
+input[type=checkbox] + label:before {
+    width: 50px;
+    height: 24px;
+}
+.input-label-text {
+    display: flex;
+    align-items: center;
+}
