--- a/src/styles.scss
+++ b/src/styles.scss
@@ -143,7 +143,7 @@ body {
     overflow: hidden;
 }
 .ui-accordion-content {
-    padding: 25px 15px 25px 45px;
+    padding-top:15px;
     border-top: 1px solid #979797;  
 }
 .icon-minus {
