--- a/src/app/utilities/accordion/accordion.component.scss
+++ b/src/app/utilities/accordion/accordion.component.scss
@@ -16,11 +16,9 @@
     font-size: 16px;
     font-weight: 600;
 }
-input[type=checkbox] + label:before {
-    width: 50px;
-    height: 24px;
-}
-.input-label-text {
+// .input-label-text {
+// }
+.accodion-content-section {
     display: flex;
     align-items: center;
 }
