--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,13 +30,13 @@ input{
     height: 60px;
 }
 
-.content-section {
-	padding: 50px 50px 30px 50px;	
-	background-color: white;
-    box-shadow: 1px 1px 5px -1px;
-    margin:30px 0px;
-    margin-right: 10px;
-}
+// .content-section {
+// 	padding: 50px 50px 30px 50px;	
+// 	background-color: white;
+//     box-shadow: 1px 1px 5px -1px;
+//     margin:30px 0px;
+//     margin-right: 10px;
+// }
 
 .common-heading-padding {
 	padding-bottom: 22px;
@@ -46,9 +46,6 @@ input{
     padding-bottom: 20px;
 }
 
-.common-block-padding {
-	padding-bottom: 45px;
-}
 
 .common-input-element-padding {
 	padding-bottom: 5px;
@@ -223,12 +220,6 @@ input[type=checkbox] + label {
     // width: 270px;
 }
 
-  .accordion-container{
-    // position: relative;
-    width: 270px;
-    height: auto;
-    margin-right:10px;
-  }
   .set{
     position: relative;
     width: 100%;
