--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -9,3 +9,8 @@
     padding-left: 42px;
     padding-top: 15px;
 }
+.input-field {
+    font-size:20px;
+    font-weight: 600;
+    line-height: 18px;
+}
