--- a/src/app/utilities/accordion/accordion.component.html
+++ b/src/app/utilities/accordion/accordion.component.html
@@ -8,10 +8,9 @@
         <ng-template pTemplate="content" >
             <div *ngFor="let eachQue of questionnaireData; let ind= index">
                 <div class="content-sections">
-                    <div class="accodion-content-section">
+                    <div class="accodion-content-section" (click)="takeQuestion(eachQue)">
                         <input disabled type="checkbox" [id]="eachQue.formData[0].name" [name]="eachQue.formData[0].name"  [checked]="eachQue.isAnswered" [(ngModel)]="eachQue.isAnswered">
-                        <label class="input-label-text"></label>
-                        <div>{{ eachQue.question }}</div>
+                        <label [for]="eachQue.formData[0].name" class="input-label-text">{{ eachQue.question }}</label>
                     </div>
                 </div>
             </div>
