--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,23 +10,25 @@
 			<div class="accordion-container">
 				<app-accordion></app-accordion>
 			</div>
-		</div>
-		<router-outlet></router-outlet>		
-		<div class="right-nav" *ngIf=isLandingPage>
-			<div class="right-nav-button-wrapper">
-				<div *ngIf="openSideNavFlag" class="nav-button-wrapper">
-					<img (click)="closeSideNav()" class="side-nav-icon" src="../assets/images/icon_arrow.png">
-				</div>
-				<div *ngIf="!openSideNavFlag " class="nav-button-wrapper">
-					<img (click)="openSideNav()" class="side-nav-icon prev-side-nav-icon"
-						src="../assets/images/icon_arrow.png">
-
-				</div>
-			</div>
-			<div class="right-nav-accordion" #rightNavAccordion>
-				<app-accordion></app-accordion>
-			</div>
-		</div>
+        </div>
+        <div class="content-wrapper">
+            <router-outlet></router-outlet>		
+            <div class="right-nav" *ngIf=isLandingPage>
+                <div class="right-nav-button-wrapper">
+                    <div *ngIf="openSideNavFlag" class="nav-button-wrapper">
+                        <img (click)="closeSideNav()" class="side-nav-icon" src="../assets/images/icon_arrow.png">
+                    </div>
+                    <div *ngIf="!openSideNavFlag " class="nav-button-wrapper">
+                        <img (click)="openSideNav()" class="side-nav-icon prev-side-nav-icon"
+                            src="../assets/images/icon_arrow.png">
+    
+                    </div>
+                </div>
+                <div class="right-nav-accordion" #rightNavAccordion>
+                    <app-accordion></app-accordion>
+                </div>
+            </div>
+        </div>
 
 	</div>
 </main>
