--- a/src/app/utilities/accordion/accordion.component.scss
+++ b/src/app/utilities/accordion/accordion.component.scss
@@ -2,7 +2,7 @@
     display: block;
     text-decoration: none;
     color: #000;  
-    border-top: 1px solid #979797;  
+    // border-top: 1px solid #979797;  
     background-color: #fff;
     cursor: pointer;
 }
